@@ -1,5 +1,6 @@
 Changes in Release 1.2.0
 =============================================
+[XSTJ-22] - non-zero exit codes from shell script
 [XSTJ-17] - multiple errors in --help documentation
 
 Changes in Release 1.1.4
